syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";  
import "google/protobuf/timestamp.proto";

package Akka.Pathfinder;
option csharp_namespace = "Akka.Pathfinder.Grpc";

service MapManager {
    rpc Load(MapRequest) returns(Ack);
    rpc UpdateMap(MapRequest) returns(Ack);
}

message MapRequest{
    string map_id = 1;
}

message Ack{
    bool success = 1;
}